sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:7: error: not found: value e
  while (e>1 || c>0){
         ^